--- a/template.ipynb
+++ b/template.ipynb
@@ -6,7 +6,7 @@
       "name": "intro.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOTTxAP4Ozukf32T5SnUtcp",
+      "authorship_tag": "ABX9TyOFgjtaOdu+H4h7m5lt1p4m",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,6 +34,7 @@
         "id": "5ULDqP4svxKi"
       },
       "source": [
+        "print(\"Hello World!\")\n",
         "print(\"Hello World!\")"
       ],
       "execution_count": null,
